update banner bg colour

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -8,8 +8,8 @@
 @tailwind preflight;
 
 .banner {
+  @apply .bg-blue-main;
   height: 100vh;
-  background-color: #0f2f21;
   background-size: cover;
   background-image: url(../images/estate_banner.jpg);
 
