--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -37,4 +37,88 @@ footer {
   }
 }
 
+.banner-height {
+  height: 56.25vw;
+
+  @media screen and (max-width: 576px) {
+    height: 100vw;
+  }
+}
+
+.estate-facade {
+  background-image: url(../images/homepage/estate_facade.jpg);
+  background-size: cover;
+}
+
+.villa-shoutout {
+  background-image: url(../images/homepage/estate_villa_shoutout.jpg);
+  background-size: cover;
+}
+
+.heading-text {
+@apply .font-heading .text-lg .tracking-wide .font-black;
+}
+
+.body-text {
+@apply .font-serif .text-lg .leading-relaxed;
+}
+
+html:lang(zh) .body-text {
+@apply .font-sans .font-thin;
+}
+
+.reviews-text {
+@apply .font-serif .italic .text-lg;
+}
+
+.reviews-text:lang(zh) {
+@apply .font-sans;
+}
+
+.quotes-text {
+@apply .font-serif .italic .text-5xl;
+}
+
+.quotes-text:lang(zh) {
+@apply .text-4xl .font-sans;
+}
+
+.banner-text {
+@apply .font-heading .text-5xl;
+
+  @media screen and (max-width: 576px) {
+  @apply .text-4xl;
+  }
+}
+
+
+
+@media screen and (max-width: 576px) {
+  .quotes-text {
+  @apply .font-serif .italic .text-2xl;
+  }
+
+  .quotes-text:lang(zh) {
+  @apply .text-xl;
+  }
+}
+
+@media screen and (min-width: 577px) and (max-width: 950px) {
+  .quotes-text {
+  @apply .font-serif .italic .text-3xl;
+  }
+
+  .quotes-text:lang(zh) {
+  @apply .text-2xl;
+  }
+}
+
+.slanted-text {
+@apply .font-serif .italic .text-lg;
+}
+
+html:lang(zh) .slanted-text {
+@apply .font-heading .roman .text-base;
+}
+
 @tailwind utilities;
