update footer, use correct banner sizes

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -9,13 +9,10 @@
 
 .banner {
   @apply .bg-blue-main;
-  height: 100vh;
   background-size: cover;
   background-image: url(../images/estate_banner.jpg);
 
-  @media screen and (max-width: 576px) {
-    height: 100vw;
-  }
+
 }
 
 footer {
@@ -42,6 +39,14 @@ footer {
 
   @media screen and (max-width: 576px) {
     height: 100vw;
+  }
+}
+
+.section-height {
+  height: 50vw;
+
+  @media screen and (max-width: 576px) {
+    height: 150vw;
   }
 }
 
