use min height for shoutout banner

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -50,6 +50,14 @@ footer {
   }
 }
 
+.section-height {
+  min-height: 50vw;
+
+  @media screen and (max-width: 576px) {
+    min-height: 150vw;
+  }
+}
+
 .estate-facade {
   background-image: url(../images/homepage/estate_facade.jpg);
   background-size: cover;
