--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -5,26 +5,21 @@
   font-weight: bold;
 }
 
-@tailwind preflight;
+@tailwind base;
+
+@import "type";
 
 .banner {
-  @apply .bg-blue-main;
-  background-size: cover;
   background-image: url(../images/estate_banner.jpg);
-
-
 }
 
 footer {
   background: url(../images/estate_footer.jpg);
   background-size: 8px auto;
 }
-.body-font {
-  @apply .font-serif;
-}
 
 .body-font:lang(zh) {
-  @apply .font-sans .font-thin;
+  @apply font-sans font-thin;
 }
 
 
@@ -68,70 +63,6 @@ footer {
   background-size: cover;
 }
 
-.heading-text {
-@apply .font-heading .text-lg .tracking-wide .font-black;
-}
 
-.body-text {
-@apply .font-serif .text-lg .leading-relaxed;
-}
-
-html:lang(zh) .body-text {
-@apply .font-sans .font-thin;
-}
-
-.reviews-text {
-@apply .font-serif .italic .text-lg;
-}
-
-.reviews-text:lang(zh) {
-@apply .font-sans;
-}
-
-.quotes-text {
-@apply .font-serif .italic .text-5xl;
-}
-
-.quotes-text:lang(zh) {
-@apply .text-4xl .font-sans;
-}
-
-.banner-text {
-@apply .font-heading .text-5xl;
-
-  @media screen and (max-width: 576px) {
-  @apply .text-4xl;
-  }
-}
-
-
-
-@media screen and (max-width: 576px) {
-  .quotes-text {
-  @apply .font-serif .italic .text-2xl;
-  }
-
-  .quotes-text:lang(zh) {
-  @apply .text-xl;
-  }
-}
-
-@media screen and (min-width: 577px) and (max-width: 950px) {
-  .quotes-text {
-  @apply .font-serif .italic .text-3xl;
-  }
-
-  .quotes-text:lang(zh) {
-  @apply .text-2xl;
-  }
-}
-
-.slanted-text {
-@apply .font-serif .italic .text-lg;
-}
-
-html:lang(zh) .slanted-text {
-@apply .font-heading .roman .text-base;
-}
 
 @tailwind utilities;
